<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/modify_post"
        android:title="@string/modify" />

    <item
        android:id="@+id/view_post_author"
        android:title="@string/view_author" />

    <item
        android:id="@+id/report_post"
        android:title="@string/report_post" />

    <item
        android:id="@+id/collapse_post"
        android:title="@string/collapse_post" />

</menu>